<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/titulo_tarefa"
                android:textSize="18sp"
                app:fontFamily="monospace" />

            <EditText
                android:id="@+id/inputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/desc_tarefa"
                android:textSize="18sp"
                app:fontFamily="monospace" />

            <EditText
                android:id="@+id/inputDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <CheckBox
                android:id="@+id/statCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tarefa_concluida"
                android:typeface="monospace" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAlterarTarefa"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:text="@string/btn_tarefa"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/btnDeletarTarefa"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F44336"
                    android:text="@string/btn_deletar"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="monospace" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <TextView
                android:id="@+id/textStatusSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="30sp"
                app:fontFamily="monospace" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>